<resources>
    <string name="app_name">商店管理系统</string>
    <!--登录界面字符串-->
    <string name="sign_in">欢迎使用</string>
    <string name="login_button">登  录</string>
    <string name="username">账户</string>
    <string name="password">密码</string>
    <string name="remember_account">记住账户</string>
    <string name="remember_password">记住密码</string>
    <string name="sign_inin">注册帐号</string>
    <string name="forget_password">忘记密码</string>
    <!--注册界面-->
    <string name="phone_number">电话</string>
    <string name="item_name">商品名称</string>
    <!--录入商品界面-->
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="product_date">生产日期</string>
    <string name="cost_price">进&#160;&#160;价</string>
    <string name="sell_price">售&#160;&#160;价</string>
    <string name="quantity_date">保&#160;质&#160;期</string>
    <string name="quantity">进&#160;货&#160;量</string>
    <string name="barcode">条&#160;形&#160;码</string>
    <string name="input_item">商品录入</string>
    <string name="input_hint_price">10.1</string>
    <string name="input_hint_quantity">12</string>
    <string name="input_hint_year">2017</string>
    <string name="input_hint_month">1</string>
    <string name="danwei">袋</string>
    <string name="yuan">元</string>
    <string name="tian">天</string>
    <string name="clear_button">清除</string>
    <string name="save_button">保存</string>
    <string name="function_broadcast">广播</string>

    <!--售卖界面    -->
    <string name="total_cost_hint">0.00元</string>
    <string name="selling_item">商品出售</string>
    <string name="pay_for">结账</string>

    <!--会员管理界面-->
    <string name="member">会员管理</string>
    <string name="add_member">增加会员</string>

    <!--增加会员界面-->
    <string name="member_name">名字</string>
    <string name="address">地址</string>

    <!--修改会员信息界面-->
    <string name="change_member">修改信息</string>
    <string name="change">修改</string>
    <string name="integral">积分</string>

    <!--选择会员界面-->
    <string name="choose_customer">选择会员</string>

    <!--订单查询界面-->
    <string name="order_search">订单查询</string>
    <string name="screen">筛选订单</string>

    <!--订单界面-->
    <string name="order_info">订单信息</string>
    <string name="ID">ID</string>
    <string name="date">日期</string>
    <string name="order_quantity">数量</string>
    <string name="customer_name">顾客姓名</string>

    <!--查询商品界面-->
    <string name="search_item">查询商品</string>
    <string name="search">查询</string>
    <string name="search_edit_hint">名称、ID</string>

    <!--商品修改界面-->
    <string name="item_change">商品修改</string>
    <string name="name">名&#160;&#160;称</string>

    <!--数据分析界面-->
    <string name="data_analyse">数据分析</string>
</resources>
