<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    android:weightSum="1">

    <!--Sign In编制-->
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="80dp"
        android:paddingTop="50dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="50sp" />

    <!--帐号输入框-->
    <EditText
        android:id="@+id/account_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="15dp"
        android:inputType="phone"
        android:background="@mipmap/input_bg"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/username"
        android:paddingLeft="15dp" />

    <!--密码输入框-->
    <EditText
        android:id="@+id/password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="15dp"
        android:inputType="textPassword"
        android:background="@mipmap/input_bg"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/password"
        android:paddingLeft="15dp" />

    <!--水平布局，放入密码选取框-->
    <LinearLayout
        android:id="@+id/linear_check"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="1">
        <CheckBox
            android:id="@+id/rem_account_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="25dp"
            android:text="@string/remember_account"
            android:textColor="@color/white"/>
        <CheckBox
            android:id="@+id/rem_password_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:text="@string/remember_password"
            android:textColor="@color/white"
            android:shadowColor="@color/white"/>
    </LinearLayout>

    <!--登录按钮-->
    <Button
        android:id="@+id/log_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/login_button"
        android:text="@string/login_button"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <!--注册和忘记密码-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--注册-->
        <Button
            android:id="@+id/sign_button"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_inin"
            android:background="@color/transparent"
            android:textColor="@color/white"
            android:paddingLeft="25dp"/>

        <!--忘记密码-->
        <Button
            android:id="@+id/forget_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:background="@color/transparent"
            android:textColor="@color/white"
            android:paddingRight="25dp"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

</LinearLayout>