<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/item_name"
        android:inputType="textPersonName"
        android:textSize="30sp"
        android:textColorHint="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:textSize="30dp"
            android:text="@string/product_date"/>

        <EditText
            android:id="@+id/editText2"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:ems="10"
            android:hint="2017"
            android:textColorHint="@color/white"
            android:layout_marginLeft="20dp"
            android:inputType="number" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:textColor="@color/red"
            android:textSize="30dp"/>

        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:ems="10"
            android:hint="1"
            android:textColorHint="@color/white"
            android:inputType="number" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month"
            android:textColor="@color/red"
            android:textSize="30dp"/>

        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:ems="10"
            android:hint="1"
            android:textColorHint="@color/white"
            android:inputType="number" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day"
            android:textColor="@color/red"
            android:textSize="30dp"/>
    </LinearLayout>

   <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/red"
    android:textSize="30dp"
    android:text="@string/cost_price"/>

</LinearLayout>