<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg">

    <!--标题-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/return_button_in_order_item_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@color/transparent"
            android:src="@mipmap/return_bt"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="80dp"
            android:text="@string/order_info"
            android:textColor="@color/red"
            android:textSize="30sp" />
    </RelativeLayout>

    <!--积分-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:orientation="horizontal"
        android:gravity="center">

        <!--订单ID-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ID"
            android:textColor="@color/red"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/ID_text_in_order_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp" />
    </LinearLayout>


    <!--积分-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="horizontal"
        android:gravity="center">

        <!--日期-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/red"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/date_text_in_order_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp" />
    </LinearLayout>

    <!--积分-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="horizontal"
        android:gravity="center">

        <!--数量-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_quantity"
            android:textColor="@color/red"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/quantity_text_in_order_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp" />
    </LinearLayout>

    <!--积分-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="horizontal"
        android:gravity="center">

        <!--商品名-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_name"
            android:textColor="@color/red"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/item_name_text_in_order_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp" />
    </LinearLayout>

    <!--积分-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="horizontal"
        android:gravity="center">

        <!--顾客名-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_name"
            android:textColor="@color/red"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/customer_name_text_in_order_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp" />
    </LinearLayout>


</LinearLayout>