<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg">

    <!--标题-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/return_button_in_sell_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@color/transparent"
            android:src="@mipmap/return_bt"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="80dp"
            android:text="@string/selling_item"
            android:textColor="@color/red"
            android:textSize="30sp" />

        <ImageButton
            android:id="@+id/scan_button_in_sell_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginStart="20dp"
            android:background="@color/transparent"
            android:src="@mipmap/sao_miao"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/total_price_textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="30dp"
            android:gravity="center"
            android:hint="@string/total_cost_hint"
            android:textColorHint="@color/white">
        </TextView>
    </LinearLayout>

    <ListView
        android:id="@+id/sell_layout_listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8">
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:paddingStart="35dp"
        android:paddingEnd="35dp"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/clear_button_in_sell"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:textColor="@color/red"
            android:text="@string/clear_button"/>

        <Button
            android:id="@+id/pay_for_button_in_sell"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:textColor="@color/red"
            android:text="@string/pay_for"/>
    </LinearLayout>
</LinearLayout>