<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_inin"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:paddingBottom="80dp"
        android:paddingTop="50dp"/>


    <!--帐号-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="20dp"
        android:layout_marginBottom="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/sign_account_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ems="10"
            android:inputType="phone"
            android:textColor="@color/white"
            android:background="@mipmap/input_bg"/>

    </LinearLayout>

    <!--密码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="20dp"
        android:layout_marginBottom="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/sign_password_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:background="@mipmap/input_bg"/>

    </LinearLayout>

    <!--电话-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="20dp"
        android:layout_marginBottom="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/phone_number"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/sign_phone_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ems="10"
            android:inputType="phone"
            android:textColor="@color/white"
            android:background="@mipmap/input_bg"/>

    </LinearLayout>

    <!--注册按钮-->
    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_inin"
        android:background="@color/login_button"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_margin="20dp"/>
</LinearLayout>